2008-12-18  Neal H. Walfield  <neal@gnu.org>

	* viengoos/message.h (vg_message_space): New function.

2008-12-18  Neal H. Walfield  <neal@gnu.org>

	* viengoos/rpc.h (RPC_SEND_MARSHAL): Make the reply messenger the
	first capability.
	(RPC_SEND_UNMARSHAL): Likewise.

2008-12-18  Neal H. Walfield  <neal@gnu.org>

	* RPC: Move here from ../hurd.

2008-12-18  Neal H. Walfield  <neal@gnu.org>

	* viengoos/activity.h (struct activity_memory_policy): Rename from
	this...
	(struct vg_activity_memory_policy): ... to this.  Update users.
	(struct activity_policy): Rename from this...
	(struct vg_activity_policy): ... to this.  Update users.
	(ACTIVITY_STATS_PERIODS): Rename from this...
	(VG_ACTIVITY_STATS_PERIODS): ... to this.  Update users.
	(struct activity_stats): Rename from this...
	(struct vg_activity_stats): ... to this.  Update users.
	(struct activity_info): Rename from this...
	(struct vg_activity_info): ... to this.  Update users.
	* viengoos/addr.h (struct addr): Rename from this...
	(struct vg_addr): ... to this.  Update users.
	* viengoos/cap.h (struct object_policy): Rename from this...
	(struct vg_object_policy): ... to this.  Update users.
	(struct object_name): Rename from this...
	(struct vg_object_name): ... to this.  Update users.
	(struct object): Rename from this...
	(struct vg_object): ... to this.  Update users.
	* viengoos/folio.h (struct folio_policy): Rename from this...
	(struct vg_folio_policy): ... to this.  Update users.
	(struct folio): Rename for this...
	(struct vg_folio): ... to this.  Update users.
	* viengoos/thread.h
	(HURD_EXREGS_SET_UTCB): Rename from this...
	(VG_EXREGS_SET_UTCB): ... to this.  Update users.
	(HURD_EXREGS_SET_EXCEPTION_MESSENGER): Rename from this...
	(VG_EXREGS_SET_EXCEPTION_MESSENGER): ... to this.  Update users.
	(HURD_EXREGS_SET_ASPACE): Rename from this...
	(VG_EXREGS_SET_ASPACE): ... to this.  Update users.
	(HURD_EXREGS_SET_ACTIVITY): Rename from this...